# ghostcms2mastodon

./: .env  .secret  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  webhookfromghost.ini  webhookfromghost.py  wsgi.py
.github/workflows/: codeql.yml
